links to slider, touchdown in india

--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -5,10 +5,19 @@
     padding-top: 34%; /* Aspect Ratio of 32:13 */
 }
 
-.carousel .overlay {
+.carousel .underlay {
     background: #3a3a3a;
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+}
+
+.carousel .carousel-container {
     width: 100%;
     height: 100%;
     display: flex;
@@ -19,35 +28,41 @@
     left: 0;
 }
 
-.carousel .overlay .text-container {
+.carousel .carousel-container .text-container {
     width: 100%;
     background-color: rgba(17, 41, 75, 0.562);
     padding: 20px;
+    z-index: 4;
 }
 
-.carousel .overlay .text-container.transparent {
+.carousel .carousel-container .text-container.transparent {
     background-color: rgba(17, 41, 75, 0);
 }
 
-.overlay .text-container  .tile-display {
+.carousel-container .text-container .tile-display {
     width: 80%;
     text-align: right;
     float: right;
 }
 
-.overlay .tile-display.with-background {
+.carousel-container .tile-display.with-background {
     background: #11294B;
 }
 
-.overlay h1 {
+.carousel-container h1 {
     color: #fff;
     width: 100%;
     text-align: right;
     font-size: 2.5rem;
 }
 
+.carousel-container a {
+    text-decoration: none;
+    border: none;
+}
 
-.overlay .pagination .dot {
+
+.carousel-container .pagination .dot {
     height: 15px;
     width: 15px;
     border: 1px solid #fff;
@@ -57,11 +72,11 @@
     cursor: pointer;
 }
 
-.overlay .pagination .dot:hover {
+.carousel-container .pagination .dot:hover {
     background: #ececec;
 }
 
-.overlay .pagination .dot.active {
+.carousel-container .pagination .dot.active {
     background: #ececec;
 }
 
@@ -71,11 +86,11 @@
         padding-top: 70%; /* Aspect Ratio of 32:13 */
     }
 
-    .overlay h1 {
+    .carousel-container h1 {
         font-size: 1.3rem;
     }
 
-    .overlay .text-container  .tile-display {
+    .carousel-container .text-container  .tile-display {
         width: 100%;
     }
   }
